[package]
name = "jwt"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
claims = { path = "../claims"}
serde_json = "1.0.149"
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
jsonwebtoken = { version = "10.3.0" }